# schism

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_build.sh  cmake_generate.sh  copy_res.sh  vcpkg.json
.github/workflows/: cmake-single-platform.yml
res/shaders/: renderer2d.frag  renderer2d.vert  sprite_renderer.frag  sprite_renderer.vert  text_renderer.frag  text_renderer.vert
src/: Schism.h
src/chess/: BoardManager.cpp  BoardManager.h  BoardRenderer.cpp  BoardRenderer.h  Chess.cpp  Chess.h  ChessEvents.h  Common.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h
src/chess/Networking/: NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h
src/chess/Server/: Client.cpp  Client.h  Game.cpp  Game.h  Messages.h  NetClient.cpp  NetClient.h  NetGame.cpp  NetGame.h  NetMessageType.h  NetServer.cpp  NetServer.h  Server.cpp  Server.h
src/game/: Game.cpp  Game.h  main.cpp  test.txt
src/schism/: Application.cpp  Application.h  Core.h  EntryPoint.h  Schism.h
src/schism/Audio/: Source.cpp  Source.h  WavLoader.cpp  WavLoader.h
src/schism/Components/: Sprite.h  Transform2D.h  Transform3D.h
src/schism/Core/: Application.cpp  Application.h  AssetManager.h  Assets.h  ResourceGlobals.h  Resources.h  SceneManager.cpp  SceneManager.h  SharedContext.cpp  SharedContext.h  Timestep.h  Window.cpp  Window.h  WindowData.h
src/schism/Core/Events/: Event.h  KeyEvents.h  Keyboard.h  Mouse.h  MouseEvents.h  WindowEvents.h
src/schism/Game/: Entity.h
src/schism/Game/GameEvent/: Bus.cpp  Bus.h  CallbackBus.h  CallbackListener.h  Listener.h  SyncBus.h  SyncListener.h
src/schism/Gl/: Buffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/schism/Interfaces/: ICamera.h  IScene.cpp  IScene.h
src/schism/Renderer/: Font.cpp  Font.h  FontLoader.cpp  FontLoader.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderAPI.cpp  RenderAPI.h  Renderer2D.cpp  Renderer2D.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/schism/Sandbox/: SampleScene.cpp  SampleScene.h  Sandbox.cpp  Sandbox.h
src/schism/Scripting/Lua/: Binding.h  Lua.cpp  Lua.h
src/schism/Scripting/Lua/Bindings/: Glm.hpp
src/schism/System/: Debug.h  FileIO.cpp  FileIO.h  Log.cpp  Log.h  Ptr.h  SyncQueue.h  System.h
